--- a/Sasha-Hub/Resources.resx
+++ b/Sasha-Hub/Resources.resx
@@ -124,4 +124,7 @@
   <data name="SashaLoading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\sashaloading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SashaPurpleIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\SashaPurpleIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
